--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -242,7 +242,7 @@
             android:layout_row="7"
             android:layout_column="2"
             android:textSize="28sp"
-            android:onClick="equalClicked" />
+            android:onClick="EqClicked" />
 
         <Button
             android:layout_width="wrap_content"
